k8s/react/react-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-clip
spec:
  type: ClusterIP
  selector:
    component: react
  ports:
    - port: 80
      targetPort: 80
